# laesla-llm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  environment.yml  justfile  pyproject.toml  training_nllb_meta.py
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
notebooks/: .gitignore  training_helsinki_birectional.ipynb  training_meta_with_opus_bidirectional.ipynb  training_meta_with_personal_bidirectional.ipynb  training_personal_bidirectional.ipynb
src/python_lates/: __init__.py  cli.py  translator.py  utils.py
src/python_lates/model/: config.json  source.spm  target.spm  target_tokenizer.json  tokenizer_config.json  vocab.json  vocab.json.bak
tests/: __init__.py  test_python_lates.py
